src/styles.scss
$blue: #86a9ca;
$green: #5ca869;
$purple: #80668d;
$red: #c14c46;
$orange: #e68628;
$teal: #00ac9a;
$light_grey: #e6e6e6;
$med_grey: #ccc;
$grey: #666;

$error_color: $orange;

$workspace: $light_grey;
$borders: $light_grey;
$add_to_group: $green;
$webhook: $orange;
$update: $teal;
$msg: $blue;
$split_title: #677c91;
$split_random: #aaa;
$light_text: #ffffff;
$hover: $teal;

$button_light: #3498db;
$button_dark: #2980b9;
$button_hover: #3cb0fd;

$button_light: $blue;
$button_dark: $blue - #111;
$button_hover: $blue + #111;

$terminal_color: $red;
$path_color: #98C0D9;

$z_connectors: -1;
$z_dragging: 100;
$z_endpoints: 50;

$node_width: 200px;


body {

    background-color: #fff;
    background-position: -12px -7px;
    background-image: linear-gradient(0deg, transparent 24%, rgba(80, 80, 80, 0.05) 25%, rgba(80, 80, 80, 0.05) 26%, transparent 27%, transparent 74%, rgba(80, 80, 80, 0.05) 75%, rgba(80, 80, 80, 0.05) 76%, transparent 77%, transparent), linear-gradient(90deg, transparent 24%, rgba(80, 80, 80, 0.05) 25%, rgba(80, 80, 80, 0.05) 26%, transparent 27%, transparent 74%, rgba(80, 80, 80, 0.05) 75%, rgba(80, 80, 80, 0.05) 76%, transparent 77%, transparent);
    height: 100%;
    background-size: 40px 40px;
    
    font-size: 12px;
    color: #777;
    font-weight: 400;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    margin: 0;

    &.ReactModal__Body--open {
        overflow: hidden;
    }

    .select2 {
        width: 100% !important;
        .select2-selection {
            height: 32px;

            &[aria-expanded=false] {
                border-color: $light_grey;
            }

            &:focus {
                outline: none;
            }
        }

        .select2-selection__rendered {
            color: #666;
        }
    }

    input {
        -webkit-border-radius: 4px;
        -moz-border-radius: 4px;
        border-radius: 4px;
        border-color: #e6e6e6;
        border-style:solid;
        box-shadow: none;
        outline: none;
    }
}

.code {
    background: #f3f3f3;
    padding: 10px;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
}

#header {
    height: 40px;
    width: 100%;
    background: $blue - #111;
}

#editor {

    position: relative;
    top: 0;
    height: 20000px;
    margin: 20px;

    #root {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;

        &:after {
            content:"";
            clear: both;
            display:table; 
        }
    }
}

.clearfix {
    clear: both;
}

.actions {
    .action {
        .action-title {
            padding: 4px;
            text-shadow: 0px 1px rgba(0, 0, 0,.2);
            color: $light_text;
            text-align: center;
            font-size:13px;
        }

        .action-content {
            padding: 10px;
        }

        &.add-to-group {
            .action-title {
                background: $add_to_group;
            }
        }

        &.msg {
            .action-title {
                background: $msg;
            }
        }

        &.save-to-contact, &.set-language, &.set-preferred-channel {
            .action-title {
                background: $update;
            }
        }

        &.webhook {
            .action-title {
                background: $webhook;
            }
        }
    }
}

.ReactModal__Overlay {
    background-color: rgba(0, 0, 0, .6) !important;
}

.ReactModal__Content {
    box-shadow: 1px 1px 5px 1px #555;
}
/* ... */

